[gd_scene format=3 uid="uid://dhomxd6dxm47v"]

[ext_resource type="FontFile" uid="uid://buul432qy6di5" path="res://ui/theme/fonts/font_title_small.tres" id="1"]
[ext_resource type="FontFile" path="res://ui/theme/fonts/font_text_bold_italics.tres" id="2"]
[ext_resource type="StyleBox" path="res://ui/theme/panel_darker.tres" id="3"]
[ext_resource type="Theme" path="res://ui/theme/gdscript_app_theme.tres" id="4"]
[ext_resource type="Texture2D" uid="uid://botjmjx4xso5i" path="res://ui/icons/checkmark_valid.svg" id="5"]
[ext_resource type="Script" uid="uid://cigaiw5xy7nav" path="res://ui/screens/lesson/UIBaseQuiz.gd" id="6"]
[ext_resource type="StyleBox" path="res://ui/theme/button_outline_normal.tres" id="7"]
[ext_resource type="StyleBox" path="res://ui/theme/button_outline_hover.tres" id="8"]
[ext_resource type="StyleBox" path="res://ui/theme/button_outline_pressed.tres" id="9"]
[ext_resource type="StyleBox" path="res://ui/theme/button_outline_focus.tres" id="10"]

[node name="UIBaseQuiz" type="PanelContainer" unique_id=1183466182 node_paths=PackedStringArray("_outline", "_question", "_explanation", "_content", "_completed_before_icon", "_choice_container", "_result_container", "_submit_button", "_skip_button", "_result_label", "_correct_answer_label", "_help_message")]
custom_minimum_size = Vector2(400, 166)
offset_right = 400.0
offset_bottom = 202.0
theme = ExtResource("4")
theme_override_styles/panel = ExtResource("3")
script = ExtResource("6")
_outline = NodePath("Outline")
_question = NodePath("ClipContentBoundary/ChoiceContainer/ChoiceView/QuizHeader/Question")
_explanation = NodePath("ClipContentBoundary/ResultContainer/ResultView/Explanation")
_content = NodePath("ClipContentBoundary/ChoiceContainer/ChoiceView/Content")
_completed_before_icon = NodePath("ClipContentBoundary/ChoiceContainer/ChoiceView/QuizHeader/CompletedBeforeIcon")
_choice_container = NodePath("ClipContentBoundary/ChoiceContainer")
_result_container = NodePath("ClipContentBoundary/ResultContainer")
_submit_button = NodePath("ClipContentBoundary/ChoiceContainer/ChoiceView/HBoxContainer/SubmitButton")
_skip_button = NodePath("ClipContentBoundary/ChoiceContainer/ChoiceView/HBoxContainer/SkipButton")
_result_label = NodePath("ClipContentBoundary/ResultContainer/ResultView/Label")
_correct_answer_label = NodePath("ClipContentBoundary/ResultContainer/ResultView/CorrectAnswer")
_help_message = NodePath("ClipContentBoundary/ChoiceContainer/ChoiceView/HelpMessage")

[node name="Outline" type="PanelContainer" parent="." unique_id=2061982146]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="ClipContentBoundary" type="Control" parent="." unique_id=228700291]
clip_contents = true
layout_mode = 2

[node name="ChoiceContainer" type="MarginContainer" parent="ClipContentBoundary" unique_id=1155384982]
clip_contents = true
layout_mode = 0
offset_right = 400.0
offset_bottom = 166.0

[node name="ChoiceView" type="VBoxContainer" parent="ClipContentBoundary/ChoiceContainer" unique_id=2027027835]
layout_mode = 2

[node name="QuizHeader" type="HBoxContainer" parent="ClipContentBoundary/ChoiceContainer/ChoiceView" unique_id=813369328]
layout_mode = 2

[node name="Question" type="RichTextLabel" parent="ClipContentBoundary/ChoiceContainer/ChoiceView/QuizHeader" unique_id=567387143]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "Question"
scroll_active = false
meta_underlined = false

[node name="CompletedBeforeIcon" type="TextureRect" parent="ClipContentBoundary/ChoiceContainer/ChoiceView/QuizHeader" unique_id=882653796]
visible = false
modulate = Color(1, 1, 1, 0.235294)
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "You've already answered this quiz correctly before.
Feel free to try it again to refresh your memory!"
texture = ExtResource("5")
expand_mode = 1
stretch_mode = 6

[node name="Content" type="RichTextLabel" parent="ClipContentBoundary/ChoiceContainer/ChoiceView" unique_id=2059183518]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Explanation"

[node name="Answers" type="VBoxContainer" parent="ClipContentBoundary/ChoiceContainer/ChoiceView" unique_id=2120862898]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ClipContentBoundary/ChoiceContainer/ChoiceView" unique_id=1868126645]
layout_mode = 2
alignment = 1

[node name="SkipButton" type="Button" parent="ClipContentBoundary/ChoiceContainer/ChoiceView/HBoxContainer" unique_id=1324467287]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
tooltip_text = "You need to try to answer once before you can skip a quiz."
mouse_default_cursor_shape = 2
theme_override_styles/normal = ExtResource("7")
theme_override_styles/pressed = ExtResource("9")
theme_override_styles/hover = ExtResource("8")
theme_override_styles/focus = ExtResource("10")
disabled = true
text = "Skip"

[node name="SubmitButton" type="Button" parent="ClipContentBoundary/ChoiceContainer/ChoiceView/HBoxContainer" unique_id=219155155]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = ExtResource("7")
theme_override_styles/pressed = ExtResource("9")
theme_override_styles/hover = ExtResource("8")
theme_override_styles/focus = ExtResource("10")
text = "Submit"

[node name="HelpMessage" type="Label" parent="ClipContentBoundary/ChoiceContainer/ChoiceView" unique_id=782546199]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.14902, 0.776471, 0.968627, 1)

[node name="ResultContainer" type="MarginContainer" parent="ClipContentBoundary" unique_id=1072058215]
visible = false
modulate = Color(1, 1, 1, 0)
clip_contents = true
layout_mode = 0
offset_right = 400.0
offset_bottom = 111.0

[node name="ResultView" type="VBoxContainer" parent="ClipContentBoundary/ResultContainer" unique_id=352000171]
layout_mode = 2

[node name="Label" type="Label" parent="ClipContentBoundary/ResultContainer/ResultView" unique_id=449392522]
layout_mode = 2
theme_override_colors/font_color = Color(0.960784, 0.980392, 0.980392, 1)
theme_override_fonts/font = ExtResource("1")
text = "You're right!"

[node name="CorrectAnswer" type="Label" parent="ClipContentBoundary/ResultContainer/ResultView" unique_id=117500964]
visible = false
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.572549, 0.560784, 0.721569, 1)
theme_override_fonts/font = ExtResource("2")
text = "Answers here"

[node name="Explanation" type="RichTextLabel" parent="ClipContentBoundary/ResultContainer/ResultView" unique_id=1574332934]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Explanation"
